# bevy_galaga

./: .gitignore  Cargo.toml
assets/: Bullet_Scaled_Fixed.glb
src/: asset_loader.rs  asteroids.rs  calculation.rs  camera.rs  capsule.rs  collision_detection.rs  debug.rs  despawn.rs  earth.rs  lib.rs  main.rs  movement.rs  plugins.rs  schedule.rs  spaceship.rs
